about and contact page separated

--- a/views/ActivityViz.handlebars
+++ b/views/ActivityViz.handlebars
@@ -25,7 +25,8 @@
       <li><a href="/home">Home</a></li>
       <li><a href="/Resume/FlatResumeWeb.pdf" target="_blank" class="no-ajaxy">Resume</a></li>
       <li><a href="/projects">Projects</a></li>
-      <li><a href="/about">About&Contact</a></li>
+      <li><a href="/about">About</a></li>
+      <li><a href="/contact">Contact</a></li>
     </ul>
   </header>
   <div id="main" class="1" tabindex="-1">
@@ -42,7 +43,7 @@
         </div>
         <div class="center">
           <div class="grid-half">
-            <p class="small">
+            <p class="small panel">
               <strong>MAIN TOOLS</strong>
               <br>
               Node.js | MongoDB | Mustache | Passport | D3.js | x3dom | HTML | Bootstrap | Github | Heroku
@@ -51,34 +52,27 @@
           <div class="grid-half">
             <img src="../Project/ActivityViz/FinalSlide.png">
           </div>
-        </div>
-        <div class="center">
           <div class="grid-half">
             <img src="../Project/ActivityViz/3D-frontalview.png">
           </div>
           <div class="grid-half">
             <img src="../Project/ActivityViz/3D-sideview.png">
           </div>
-        </div>
-        <div class="center">
-          <p class="small note">
-            <strong>WHAT/WHY</strong>
-            <br>
-            Existing Kinect data analyzing programs such as <a href="https://tla.mpi.nl/tools/tla-tools/elan/" target="_blank" class="no-ajaxy">ELAN</a> and <a href="http://chronoviz.com/" target="_blank" class="no-ajaxy">ChronoViz</a> have limitations on the visualization. Gesture researchers do not have the ability to change its size and dimension, and most importantly, they do not have the freedom to manipulate the visualization. Some researchers even filtered data points by omitting the z coordinate, so that they can create their own 2D visualization. These limitations and work-around pose a critical constrain on the full potential of the Kinect data. 
-            <br>
-            <br>
-            Overall, the user data suggested that user control and freedom are violated the most in the design aspect of these programs. Therefore, a more manipulative visualization is much needed for their research.
-          </p>
-        </div>
-
-        <div>
+          <div class="center">
+            <p class="small note panel">
+              <strong>WHAT/WHY</strong>
+              <br>
+              Existing Kinect data analyzing programs such as <a href="https://tla.mpi.nl/tools/tla-tools/elan/" target="_blank" class="no-ajaxy">ELAN</a> and <a href="http://chronoviz.com/" target="_blank" class="no-ajaxy">ChronoViz</a> have limitations on the visualization. Gesture researchers do not have the ability to change its size and dimension, and most importantly, they do not have the freedom to manipulate the visualization. Some researchers even filtered data points by omitting the z coordinate, so that they can create their own 2D visualization. These limitations and work-around pose a critical constrain on the full potential of the Kinect data. 
+              <br>
+              <br>
+              Overall, the user data suggested that user control and freedom are violated the most in the design aspect of these programs. Therefore, a more manipulative visualization is much needed for their research.
+            </p>
+          </div>
           <div>
             <img src="../Project/ActivityViz/InfrastructureDiagram.png">
           </div>
-        </div>
-        <div class="center">
           <div class="grid-half">
-            <p class="small">
+            <p class="small panel">
               <strong>INFRASTRUCTURE DIAGRAM</strong>
               <br>
               Kinect ->> CSV File ->> Operating System ->> D3.js + x3dom ->> Visualization
@@ -87,27 +81,22 @@
           <div class="grid-half">
             <img src="../Project/ActivityViz/CSVSample.png">
           </div>
-        </div>
-        <div class="center">
           <div class="grid-half">
             <img src="../Project/ActivityViz/d3.jpg">
           </div>
           <div class="grid-half">
             <img src="../Project/ActivityViz/x3dom.jpg">
           </div>
-        </div>
-        <div class="center">
           <div class="grid-half">
             <img src="../Project/ActivityViz/Login.jpg">
           </div>
           <div class="grid-half">
             <img src="../Project/ActivityViz/Upload.jpg">
           </div>
-        </div>
         <div>
             <img src="../Project/ActivityViz/Visualization.jpg">
         </div>
-        <p class="large note">
+        <p class="large note panel">
           <strong>DESIGN DECISION</strong>
         </p>
         <div class="center">
@@ -188,7 +177,7 @@
             skip uploading file by clicking on visualization button on nav bar to see visualization demo.
           </p>
         </div>
-        <p class="centerText">
+        <p class="center">
           <a class="button" href="http://activiz.herokuapp.com/" target="_blank" class="no-ajaxy">Demo<span class="glyphicon glyphicon-new-window"></span></a>
         </p>
       </section>
@@ -201,7 +190,8 @@
             <li><a href="/home">Home</a></li>
             <li><a href="/Resume/FlatResumeWeb.pdf" target="_blank" class="no-ajaxy">Resume</a></li>
             <li><a href="/projects">Projects</a></li>
-            <li><a href="/about">About & Contact</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/contact">Contact</a></li>
           </ul>
         </div>
         <div>
