--- a/views/DancingTails.handlebars
+++ b/views/DancingTails.handlebars
@@ -25,7 +25,8 @@
       <li><a href="/home">Home</a></li>
       <li><a href="/Resume/FlatResumeWeb.pdf" target="_blank" class="no-ajaxy">Resume</a></li>
       <li><a href="/projects">Projects</a></li>
-      <li><a href="/about">About&Contact</a></li>
+      <li><a href="/about">About</a></li>
+      <li><a href="/contact">Contact</a></li>
     </ul>
   </header>
   <div id="main" class="1" tabindex="-1">
@@ -33,71 +34,24 @@
       <section class="project">
         <h1>Dancing Tails</h1>
         <p class="centerText">
-          Dancing Tails Dog Training is a local business that is located in the East Bay Area. The website is built on MEAN stack. The website's loading speed still needs to be optimized due to high resolution images. The Website is expecting to launched in March 2015.
+          Dancing Tails Dog Training is a local business that is located in the East Bay Area.
         </p>
-        <p class="centerText">
-          <a class="button" href="http://dancingtailsdogtraining.herokuapp.com/" target="_blank" class="no-ajaxy">Demo<span class="glyphicon glyphicon-new-window"></span></a>
+        <div class="center">
+          <strong>
+            MAIN TOOLS
+          </strong>
+          <p>
+            MongoDB | Express.js | Angular.js | Node.js | JQuery | Jade | HTML | Github | Heroku | YouTube api
+          </p>
+        </div>
+        <p class="center">
+          <a class="button" href="http://dancingtailsdogtraining.herokuapp.com/" target="_blank" class="no-ajaxy">Web<span class="glyphicon glyphicon-new-window"></span></a>
         </p>
         <div>
           <div>
-            <img src="../Project/DancingPreview.jpg">
+            <img src="../Project/DancingTails/DancingTailsResponsive.png">
           </div>
-        </div>
-        <div class="center">
-          <div class="grid-half">
-            <p class="small">
-              <strong>MAIN TOOLS</strong>
-              <br>
-              MongoDB | Express.js | Angular.js | Node.js | JQuery | Jade | HTML | Github | Heroku | YouTube api
-            </p>
-            <p class="small">
-              <strong>Design</strong>
-              <br>
-              Full fixed splash home cover
-              <br>
-              Fixed width header that blends in with body's background
-              <br>
-              Full fixed page-end image
-              <br>
-              Fixed footer behind body page
-              <br>
-              Ghost buttons
-              <br>
-              Hover animation
-              <br>
-              AngularJS for faster page loading and data binding 
-              <br>
-              (One page application with multiple partial views)
-              <br>
-              Tel: and mailto: for quick desktop and mobile calling and emailing
-            </p>
-            <p class="small">
-              <strong>Future Work/To-Do List</strong>
-              <br>
-              Page image optimization
-              <br>
-              Create low, standard, high resolution images
-              <br>
-              Load image from low to high resolution
-              <br>
-              Cap image resolution based on device
-              <br>
-              Preload other images
-              <br>
-              Yelp API when business is approved.
-              <br>
-              Import reviews from Yelp
-              <br>
-              Mobile responsiveness
-              <br>
-              Online booking
-              <br> User account sign up
-            </p>
-          </div>
-          <div class="grid-half">
-            <img src="../Project/DancingTails/DancingTailsHome.jpg">
-          </div>
-        </div>
+        </div> 
       </section>
     </div>
     <footer>
@@ -108,7 +62,8 @@
             <li><a href="/home">Home</a></li>
             <li><a href="/Resume/FlatResumeWeb.pdf" target="_blank" class="no-ajaxy">Resume</a></li>
             <li><a href="/projects">Projects</a></li>
-            <li><a href="/about">About & Contact</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/contact">Contact</a></li>
           </ul>
         </div>
         <div>
