--- a/views/IconDesign.handlebars
+++ b/views/IconDesign.handlebars
@@ -25,16 +25,28 @@
       <li><a href="/home">Home</a></li>
       <li><a href="/Resume/FlatResumeWeb.pdf" target="_blank" class="no-ajaxy">Resume</a></li>
       <li><a href="/projects">Projects</a></li>
-      <li><a href="/about">About&Contact</a></li>
+      <li><a href="/about">About</a></li>
+      <li><a href="/contact">Contact</a></li>
     </ul>
   </header>
   <div id="main" class="1" tabindex="-1">
     <div id="content" class="container">
       <section class="project">
         <h1>Logos & Icons</h1>
-        <div>
-          <div>
-            <img src="../Project/IconDesign/DBZ.jpg">
+        <div class="center">
+          <div class="grid-half">
+            <img src="../Project/IconDesign/UCSDMap.jpg">
+          </div>
+          <div class="grid-half">
+            <img src="../Project/IconDesign/CognectionLogo.jpg">
+          </div>
+        </div>
+        <div class="center">
+          <div class="grid-half">
+            <img src="../Project/IconDesign/ParknGo-AppLogo.jpg">
+          </div>
+          <div class="grid-half">
+            <img src="../Project/IconDesign/ParknGo-TeamLogo.jpg">
           </div>
         </div>
         <div class="center">
@@ -53,20 +65,9 @@
             <img src="../Project/IconDesign/ActivityViz-icons.jpg">
           </div>
         </div>
-        <div class="center">
-          <div class="grid-half">
-            <img src="../Project/IconDesign/ParknGo-AppLogo.jpg">
-          </div>
-          <div class="grid-half">
-            <img src="../Project/IconDesign/ParknGo-TeamLogo.jpg">
-          </div>
-        </div>
-        <div class="center">
-          <div class="grid-half">
-            <img src="../Project/IconDesign/UCSDMap.jpg">
-          </div>
-          <div class="grid-half">
-            <img src="../Project/IconDesign/CognectionLogo.jpg">
+        <div>
+          <div>
+            <img src="../Project/IconDesign/DBZ.jpg">
           </div>
         </div>
       </section>
@@ -79,7 +80,8 @@
             <li><a href="/home">Home</a></li>
             <li><a href="/Resume/FlatResumeWeb.pdf" target="_blank" class="no-ajaxy">Resume</a></li>
             <li><a href="/projects">Projects</a></li>
-            <li><a href="/about">About & Contact</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/contact">Contact</a></li>
           </ul>
         </div>
         <div>
