--- a/views/ParknGo.handlebars
+++ b/views/ParknGo.handlebars
@@ -25,7 +25,8 @@
       <li><a href="/home">Home</a></li>
       <li><a href="/Resume/FlatResumeWeb.pdf" target="_blank" class="no-ajaxy">Resume</a></li>
       <li><a href="/projects">Projects</a></li>
-      <li><a href="/about">About&Contact</a></li>
+      <li><a href="/about">About</a></li>
+      <li><a href="/contact">Contact</a></li>
     </ul>
   </header>
   <div id="main" class="1" tabindex="-1">
@@ -42,7 +43,7 @@
         </div>
         <div class="center">
           <div class="grid-half">
-            <p class="small">
+            <p class="small panel">
               <strong>MAIN TOOLS</strong>
               <br>
               Javascript | HTML | Bootstrap | Github | PhotoShop
@@ -61,7 +62,7 @@
           </div>
         </div>
         <div class="center">
-          <p class="small note">
+          <p class="small note panel">
             <strong>WHAT/WHY</strong>
             <br>
             If you've been to UCSD, you'd already know that parking on campus is terrible. Either you are circling around the parking lot or campus for an hour trying to find a parking space, or waiting in line for that super slow machine to take everyone's payment and print a permit, almost everyone is spending more time than they should be inside those parking lots.
@@ -77,7 +78,7 @@
         </div>
         <div class="center">
           <div class="grid-half">
-            <p class="small">
+            <p class="small panel">
               <strong>STORYBOARDS:</strong>
               <br>
               To present & focus on the main issues, and the potential benefits that the application can bring.
@@ -92,9 +93,11 @@
             <img src="../Project/ParknGo/Storyboard-2.jpg">
           </div>
         </div>
-        <p class="small note">
-          Due to assignment preference, only the front-end desktop web application was developed. However, a mobile version and future plan for this idea will be dicussed later.
-         </p>
+        <div class="center">
+          <p class="small note panel">
+            Due to assignment preference, only the front-end desktop web application was developed. However, a mobile version and future plan for this idea will be dicussed later.
+          </p>
+        </div>
         <div class="center">
           <div class="grid-half">
             <img src="../Project/ParknGo/PaperPrototypeMain.JPG">
@@ -116,21 +119,21 @@
         </div>
         <div class="center">
           <div class="grid-thirds">
-            <p class="small note">
+            <p class="small note panel">
               <strong>Future Idea 1</strong>
               <br>
               Associate a particular car with an unique QR code. Scan and store information under your account. Make payment via the application on a chosen car. Metermaid scans car QR code to check car parking permit status. Authority personels scans QR code to alert user via application if necessary
             </p>
           </div>
           <div class="grid-thirds">
-            <p class="small note">
+            <p class="small note panel">
               <strong>Future Idea 2</strong>
               <br>
               Number each parking space (Treat the parking lot as an array). Park and specify which parking lot and parking space to pay for. The inputted parking lot location will pull up the rate of that parking lot. The inputted space number allows the system to generate a parking lot map to dynamically display the availability of each individual parking space. Metermaids will use that map to check which car should not be in the parking lot/expired permit.
             </p>
           </div>
           <div class="grid-thirds">
-            <p class="small note">
+            <p class="small note panel">
               <strong>Future Idea 3</strong>
               <br>
               Same as idea 2 but instead of paying for a set rate, treat the space as a hotel room. Check in first then pay when you leave. This allows users to pay for their entire staying. No more overpay or underpay. HOWEVER, this requires users to check out of the space to stop the timer/payment, which people may forget.
@@ -147,7 +150,8 @@
             <li><a href="/home">Home</a></li>
             <li><a href="/Resume/FlatResumeWeb.pdf" target="_blank" class="no-ajaxy">Resume</a></li>
             <li><a href="/projects">Projects</a></li>
-            <li><a href="/about">About & Contact</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/contact">Contact</a></li>
           </ul>
         </div>
         <div>
