--- a/views/ResumeDesign.handlebars
+++ b/views/ResumeDesign.handlebars
@@ -25,14 +25,15 @@
       <li><a href="/home">Home</a></li>
       <li><a href="/Resume/FlatResumeWeb.pdf" target="_blank" class="no-ajaxy">Resume</a></li>
       <li><a href="/projects">Projects</a></li>
-      <li><a href="/about">About&Contact</a></li>
+      <li><a href="/about">About</a></li>
+      <li><a href="/contact">Contact</a></li>
     </ul>
   </header>
   <div id="main" class="1" tabindex="-1">
     <div id="content" class="container">
       <section class="project">
         <h1>Resume Design</h1>
-        <p class="small note">
+        <p class="small note panel">
           <strong>Resume 2013</strong>
         </p>
         <div>
@@ -40,7 +41,7 @@
             <img src="../Project/ResumeDesign/Resume2013.jpg">
           </div>
         </div>
-        <p class="small note">
+        <p class="small note panel">
           <strong>Resume 2014</strong>
         </p>
         <div>
@@ -61,7 +62,8 @@
             <li><a href="/home">Home</a></li>
             <li><a href="/Resume/FlatResumeWeb.pdf" target="_blank" class="no-ajaxy">Resume</a></li>
             <li><a href="/projects">Projects</a></li>
-            <li><a href="/about">About & Contact</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/contact">Contact</a></li>          
           </ul>
         </div>
         <div>
