--- a/views/SocialFitness.handlebars
+++ b/views/SocialFitness.handlebars
@@ -25,7 +25,8 @@
       <li><a href="/home">Home</a></li>
       <li><a href="/Resume/FlatResumeWeb.pdf" target="_blank" class="no-ajaxy">Resume</a></li>
       <li><a href="/projects">Projects</a></li>
-      <li><a href="/about">About&Contact</a></li>
+      <li><a href="/about">About</a></li>
+      <li><a href="/contact">Contact</a></li>
     </ul>
   </header>
   <div id="main" class="1" tabindex="-1">
@@ -42,7 +43,7 @@
         </div>
         <div class="center">
           <div class="grid-half">
-            <p class="small">
+            <p class="small panel">
               <strong>MAIN TOOLS</strong>
               <br>
                Contextual Inqury | HTML | Axure | Lucidchart | PhotoShop
@@ -98,7 +99,8 @@
             <li><a href="/home">Home</a></li>
             <li><a href="/Resume/FlatResumeWeb.pdf" target="_blank" class="no-ajaxy">Resume</a></li>
             <li><a href="/projects">Projects</a></li>
-            <li><a href="/about">About & Contact</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/contact">Contact</a></li>
           </ul>
         </div>
         <div>
