--- a/views/UCSDMap.handlebars
+++ b/views/UCSDMap.handlebars
@@ -25,7 +25,8 @@
       <li><a href="/home">Home</a></li>
       <li><a href="/Resume/FlatResumeWeb.pdf" target="_blank" class="no-ajaxy">Resume</a></li>
       <li><a href="/projects">Projects</a></li>
-      <li><a href="/about">About&Contact</a></li>
+      <li><a href="/about">About</a></li>
+      <li><a href="/contact">Contact</a></li>
     </ul>
   </header>
   <div id="main" class="1" tabindex="-1">
@@ -42,7 +43,7 @@
         </div>
         <div class="center">
           <div class="grid-half">
-            <p class="small">
+            <p class="small panel">
               <strong>MAIN TOOLS</strong>
               <br>
               Node.js | MongoDB | Handlebars | JSON database | Google Map API | Google Analytics | Javascript | HTML | Bootstrap | Github | Heroku
@@ -61,7 +62,7 @@
           </div>
         </div>
         <div class="center">
-          <p class="small note">
+          <p class="small note panel">
             <strong>WHAT/WHY</strong>
             <br>
             UCSD uses at least 3 types of references for a structure or a building on campus: 1. Building names - such as Pepper Canyon Hall, Biology Building, and Applied Physics & Mathematics Building; 2. Building abbreviations (codes) - PCYNH, BIO, APM; 3. Building numbers - 780, 259, 249. Many people may learn the name of a building, but the code and number are most oftenly used on writing. Building codes are always used on students' schedule, and building numbers are often used for outside visitors. Even the most popular map application on a smart device can be useless when it comes to a specific reference.
@@ -70,11 +71,9 @@
             Therefore, we decided to use Google Map API to generate a map and populate a building database with the building' name, code, number, and map coordinates. With a building database that is dedicated to only UCSD buildings, any one can navigate through UCSD without any confusion.
           </p>
         </div>
-        <div class="center">
-          <p class="large note">
-            <strong>DESIGN DECISIONS</strong>
-          </p>
-        </div>
+        <p class="large note panel">
+          <strong>DESIGN DECISIONS</strong>
+        </p>
         <div class="center">
           <div class="grid-thirds">
             <p class="small note">
@@ -141,7 +140,8 @@
             <li><a href="/home">Home</a></li>
             <li><a href="/Resume/FlatResumeWeb.pdf" target="_blank" class="no-ajaxy">Resume</a></li>
             <li><a href="/projects">Projects</a></li>
-            <li><a href="/about">About & Contact</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/contact">Contact</a></li>
           </ul>
         </div>
         <div>
