--- a/views/projects.handlebars
+++ b/views/projects.handlebars
@@ -26,40 +26,36 @@
       <li><a href="/home">Home</a></li>
       <li><a href="/Resume/FlatResumeWeb.pdf" target="_blank" class="no-ajaxy">Resume</a></li>
       <li><a href="/projects">Projects</a></li>
-      <li><a href="/about">About&Contact</a></li>
+      <li><a href="/about">About</a></li>
+      <li><a href="/contact">Contact</a></li>
     </ul>
   </header>
   <div id="main" class="projects" tabindex="-1">
     <div id="content" class="container">
       <section>
         <h1>Projects</h1>
-        <p class="centerText">
-          All of my projects were developed by using Node.js unless otherwise indicated. My roles in the projects were a graphic designer, a UX designer, & a coder.
-        </p>
         <div class="center">
           <div class="grid-half">
-            <a href="/projects/{{projects.9.url}}"><img src="{{projects.9.preview}}" id="{{projects.9.id}}"></a>
+            <a href="/projects/{{projects.9.url}}"><figure class="grid4"><img style="background-image: url('{{projects.9.preview}}')" class="bgImg"></figure></a>
           </div>
           <div class="grid-half">
-            <a href="/projects/{{projects.8.url}}"><img src="{{projects.8.preview}}" id="{{projects.8.id}}"></a>
+            <a href="/projects/{{projects.8.url}}"><figure class="grid4"><img style="background-image: url('{{projects.8.preview}}')" class="bgImg"></figure></a>
           </div>
         </div>
         <div class="center">
           <div class="grid-thirds">
-            <a href="/projects/{{projects.0.url}}"><img src="{{projects.0.preview}}" id="{{projects.0.id}}"></a>
-            <a href="/projects/{{projects.1.url}}"><img src="{{projects.1.preview}}" id="{{projects.1.id}}"></a>
+            <a href="/projects/{{projects.0.url}}"><figure class="grid6"><img style="background-image: url('{{projects.0.preview}}')" class="bgImg"></figure></a>
+            <a href="/projects/{{projects.1.url}}"><figure class="grid7"><img style="background-image: url('{{projects.1.preview}}')" class="bgImg"></figure></a>
           </div>
-
           <div class="grid-thirds">
-            <a href="/projects/{{projects.2.url}}"><img src="{{projects.2.preview}}" id="{{projects.2.id}}"></a>
-            <a href="/projects/{{projects.3.url}}"><img src="{{projects.3.preview}}" id="{{projects.3.id}}"></a>
-            <a href="/projects/{{projects.4.url}}"><img src="{{projects.4.preview}}" id="{{projects.4.id}}"></a>
+            <a href="/projects/{{projects.2.url}}"><figure class="grid5"><img style="background-image: url('{{projects.2.preview}}')" class="bgImg"></figure></a>
+            <a href="/projects/{{projects.3.url}}"><figure class="grid4"><img style="background-image: url('{{projects.3.preview}}')" class="bgImg"></figure></a>
+            <a href="/projects/{{projects.4.url}}"><figure class="grid4"><img style="background-image: url('{{projects.4.preview}}')" class="bgImg"></figure></a>
           </div>
-
           <div class="grid-thirds">
-            <a href="/projects/{{projects.7.url}}"><img src="{{projects.7.preview}}" id="{{projects.7.id}}"></a>
-            <a href="/projects/{{projects.5.url}}"><img src="{{projects.5.preview}}" id="{{projects.5.id}}"></a>
-            <a href="/projects/{{projects.6.url}}"><img src="{{projects.6.preview}}" id="{{projects.6.id}}"></a>
+            <a href="/projects/{{projects.7.url}}"><figure class="grid4"><img style="background-image: url('{{projects.7.preview}}')" class="bgImg"></figure></a>
+            <a href="/projects/{{projects.5.url}}"><figure class="grid4"><img style="background-image: url('{{projects.5.preview}}')" class="bgImg"></figure></a>
+            <a href="/projects/{{projects.6.url}}"><figure class="grid5"><img style="background-image: url('{{projects.6.preview}}')" class="bgImg"></figure></a>
           </div>
         </div>
       </section>
@@ -72,7 +68,8 @@
             <li><a href="/home">Home</a></li>
             <li><a href="/Resume/FlatResumeWeb.pdf" target="_blank" class="no-ajaxy">Resume</a></li>
             <li><a href="/projects">Projects</a></li>
-            <li><a href="/about">About & Contact</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/contact">Contact</a></li>
           </ul>
         </div>
         <div>
