--- a/public/css/zxzdesigns.css
+++ b/public/css/zxzdesigns.css
@@ -1,51 +1,57 @@
 html,body{
 	background-color:#fff;
+	-webkit-overflow-scrolling:touch;
 }
 body{
-	font-size:100%;
-	line-height: 1.75em;
-	color:#222;
+	font-size:94%;
+	line-height: 1em;
+	color:#333;
 	font-family: "lato", sans-serif;
 	font-weight:400;
 	width:100%;
 	overflow:hidden !important; /*hides 2nd main*/
-	-webkit-overflow-scrolling:touch;
 }
 h1{
-	font-family:"lato", sans-serif;
 	font-size:2.5em;
 	text-transform:uppercase;
 	text-align:center;
 	font-weight:900;
 	color:#333;
-	padding-bottom:0;
 	line-height:1em;
 	margin-bottom:0.3em;
 	letter-spacing:0.11em;
 }
 h2{
-	font-family:"lato", sans-serif;
-	font-size:2em;
+	font-size:1.5em;
 	text-transform:uppercase;
 	text-align:left;
 	font-weight:700;
+	line-height: 1em;
 	color:#333;
-	line-height:1em;
-	margin-bottom:1.7em;
+	margin-bottom:1em;
 }
 *,*:after,*:before{
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 }
-body p{
-	margin-left:auto;
-	margin-right:auto;
-	text-align:left;
+button{
+	margin: auto;
+	width: 100%;
+	background: none;
+	outline: none;
+	border: none;
+	padding: 0;
+	margin-bottom: 1em;
+	line-height: 1.3em;
+	font-size: 100%;
 }
 p{
-	margin-bottom: 1em;
-	line-height: 1.75em;
+	margin-left:auto;
+	margin-right:auto;
+	text-align:center;
+	margin-bottom:1em;
+	line-height:1.3em;
 }
 p.large{
 	width:100%;
@@ -53,8 +59,21 @@ p.large{
 	text-align:center;
 }
 a{
-	color:#373737;
-	text-decoration:underline;
+	color:#333;
+	text-decoration:none;
+	-ms-transition: all 0.2s ease-out;
+	-webkit-transition: all 0.2s ease-out;
+	-moz-transition: all 0.2s ease-out;
+	-o-transition: all 0.2s ease-out;
+	transition: all 0.2s ease-out;
+}
+p a{
+	padding-bottom:0.03em;
+	border:solid 1px transparent;
+	border-bottom:dotted 1px #777;
+}
+p a:hover{
+	border-bottom:solid 1px #777;
 }
 .container{
 	width:88%;
@@ -65,26 +84,72 @@ a{
 	padding-top:4.3em;
 	*zoom:1;
 }
-img{
-	margin-top:0;
-	margin-bottom:1em;
+.container .container{
+	padding-top:1em;
+	width:100%;
+}
+.center{
+	text-align: center;
+}
+figure{
+	position:relative;
+	overflow:hidden;
+}
+.whatIdo figure a:before{
+	position:absolute;
+	width:100%;
+	height:100%;
+	left:0;
+	top:0;
+	opacity:0.2;
+	background:black;
+	content:'';
+	-ms-transition: all 0.2s ease-out;
+	-webkit-transition: all 0.2s ease-out;
+	-moz-transition: all 0.2s ease-out;
+	-o-transition: all 0.2s ease-out;
+	transition: all 0.2s ease-out;
+}
+.whatIdo figure a:hover:before{
+	opacity:0.5;
+}
+figcaption{
+	position:absolute;
+	top:50%;
+	left:50%;
+	color:#eee;
+	-webkit-transform: translate(-50%, -50%);
+	-moz-transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+	-o-transform: translate(-50%, -50%);
+}
+
+figcaption a{
+	color:white;
+	text-decoration: none;
+	border-bottom:dotted 1px white;
+	margin-right:1em;
+}
+figcaption h2{
+	color:white;
+	border:solid;
+	margin:0;
+	font-size:1em;
+	padding:0.5em;
 }
 form.container{
 	width:100%;
 }
-.center.container, .project.container{
-	padding-top:0;
-}
-.grid-half, .grid-thirds, .grid-fourths{
+.grid-half, .grid-thirds{
 	width:100%;
 	display:inline-block; 
 	margin-bottom:0.5em;
+	position:relative;
+	vertical-align: top;
+	float:left;
 }
-.projects div{
-	line-height:0;
-}
-.projects .grid-thirds{
-	margin-bottom:0;
+.projects .bgImg{
+	height:100%;
 }
 strong{
 	font-weight:900;
@@ -107,14 +172,15 @@ header ul li{
 header ul li a{
 	color:#fff;
 	text-decoration: none;
-	padding:5px 0 0 0;
-}
-header ul li a:hover{
+	padding:40px 0 0 0;
+	border-bottom:solid 1px transparent;
 	-ms-transition: all 0.2s ease-out;
 	-webkit-transition: all 0.2s ease-out;
 	-moz-transition: all 0.2s ease-out;
 	-o-transition: all 0.2s ease-out;
 	transition: all 0.2s ease-out;
+}
+header ul li a:hover{
 	border-bottom: solid 1px;
 	padding-bottom:7px;
 }
@@ -128,7 +194,7 @@ header ul li a:hover{
 	opacity:0;
 }
 #splashAbout{
-	background: url("../PingPong.jpg");
+	background-image: url("../PingPong.jpg");
 	width:100%;
 	height:100%;
 	background-size:cover;
@@ -137,10 +203,19 @@ header ul li a:hover{
 	text-align: center;
 	position:relative;
 }
-
+#splashContact{
+	background-image: url("../contactCover.jpg");
+	width:100%;
+	height:100%;
+	background-size:cover;
+	background-position:center center;
+	background-attachment:fixed;
+	text-align: center;
+	position:relative;
+}
 #splashHome{
 	position:relative;
-	background: url("../HomeCover2.JPG");
+	background-image: url("../HomeCover2.JPG");
 	width:100%;
 	height:100%;
 	background-size:cover;
@@ -148,7 +223,7 @@ header ul li a:hover{
 	background-attachment:fixed;
 	overflow:hidden;
 }
-#splashHome:before{
+.splash:before{
 	position:absolute;
 	width:100%;
 	height:100%;
@@ -160,22 +235,17 @@ header ul li a:hover{
 }
 #splashAbout .splashTitle{
 	left:auto;
-	width:50%;
+	width:52%;
 	right:5%;
 	-webkit-transform: translate(0%, -50%);
 	-moz-transform: translate(0%, -50%);
 	-ms-transform: translate(0%, -50%);
 	-o-transform: translate(0%, -50%);
 }
-#splashAbout .splashTitle h1{
+.splashTitle h1{
 	color:#fff;
 	font-size:7vw;
 }
-
-.splashTitle h1:first-child{
-	font-size:15vw;
-}
-
 .splashTitle h2{
 	color:#fff;
 	font-size:7.5vw;
@@ -183,12 +253,12 @@ header ul li a:hover{
 	line-height:1em;
 	text-align:center;
 }
-.splash .splashTitle .line{
-	background:#fff;
+.bar{
+	background:#eee;
 	height:0.2em;
 	display:block;
 	margin:0 auto;
-	width:0;
+	width:50px;
 	opacity:1;
 }
 #line1,#line2,#line3{
@@ -197,37 +267,20 @@ header ul li a:hover{
 }
 #line1{
 	font-size:7.5vw !important;
-	-moz-transition-delay: 0s;
-	-o-transition-delay: 0s;
-	-webkit-transition-delay: 0s;
-	transition-delay: 0s;
 }
 #line2{
 	font-size:3vw !important;
-	-moz-transition-delay: .08s;
-	-o-transition-delay: .08s;
-	-webkit-transition-delay: .08s;
-	transition-delay: .08s;
 }
 #line3{
 	font-size:5vw !important;
-	-moz-transition-delay: .16s;
-	-o-transition-delay: .16s;
-	-webkit-transition-delay: .16s;
-	transition-delay: .16s;
 }
-#code{
-	top:0.1em;
-}
-#design{
-	bottom:0.1em;
-}
+
 #mutt{
 	background: url("../Penelope.jpg");
 	width:100%;
 	height:100%;
 	background-size:cover;
-	background-position:center center;
+	background-position:center left;
 	text-align: center;
 	position:relative;
 	background-attachment:fixed;
@@ -248,10 +301,6 @@ header ul li a:hover{
 	background:#fff;
 	color:#000;
 }
-.mobileMode #mutt .button:hover{
-	color:inherit;
-	background:inherit;
-}
 .splashTitle{
 	position: absolute;
 	display:inline-block;
@@ -263,6 +312,16 @@ header ul li a:hover{
 	-ms-transform: translate(-50%, -50%);
 	-o-transform: translate(-50%, -50%);
 }
+.panel{
+	max-width:300px;
+	padding:20px;
+	margin:20px auto;
+	border-bottom:solid 1px #eee;
+}
+.panel:last-child{
+	border-bottom:none;
+}
+
 .ease{
 	-ms-transition: all 0.8s ease;
 	-webkit-transition: all 0.8s ease;
@@ -292,13 +351,37 @@ header ul li a:hover{
 	-o-transition: all 0.8s cubic-bezier(0,1.5,0.5,1);
 	transition: all 0.8s cubic-bezier(0,1.5,0.5,1);
 }
+.delay0{
+	-moz-transition-delay: 0s;
+	-o-transition-delay: 0s;
+	-webkit-transition-delay: 0s;
+	transition-delay: 0s;
+}
+.delay1{
+	-moz-transition-delay: .08s;
+	-o-transition-delay: .08s;
+	-webkit-transition-delay: .08s;
+	transition-delay: .08s;
+}
+.delay2{
+	-moz-transition-delay: .16s;
+	-o-transition-delay: .16s;
+	-webkit-transition-delay: .16s;
+	transition-delay: .16s;
+}
 .contactMe h1, .projects h1, .project h1{
 	margin-bottom:0.7em;
+}
+.whatIdo{
+	margin-bottom:6em;
 }
 .aboutMe, .contactMe{
 	margin-bottom:3em;
 }
-.aboutMe:after, .contactMe:after{
+.aboutMe h2{
+	text-align: center;
+}
+.whatIdo:after, .contactMe:after, .about .aboutMe:after{
 	content:"";
 	position:absolute;
 	left:0;
@@ -306,28 +389,18 @@ header ul li a:hover{
 	width:100%;
 	height:2px;
 	background:#eaeaea;
-	margin-top:2em;
+	margin-top:3em;
 }
 .home .aboutMe figure{
 	width:200px;
 	height:200px;
-	overflow:hidden;
 	margin: 2em auto;
 }
 .home .aboutMe img{
 	width:100%;
 }
-.whatIdo h2, p.small{
-	text-align:center !important;
-	margin:0 auto !important;
-}
-.whatIdo .grid-thirds{
-	width:32%;
-	margin-right:1.5%;
-	padding-bottom:1.5%;
-}
-.whatIdo .grid-thirds:nth-child(3n+0){
-	margin-right:0;
+.whatIdo h2{
+	text-align:center;
 }
 .whatIdo figure{
 	display:inline-block;
@@ -340,18 +413,8 @@ header ul li a:hover{
 	background-size:cover;
 	background-position:center center;
 }
-.whatIdo figure:nth-child(3n+0){
-	margin-right:0;
-}
-.whatIdo img{
-	margin:0;
-}
-.whatIdo .grid-thirds h2{
-	font-size:18px;
-	font-weight:1000;
-	margin-top:2.5em;
-}
 ul{
+	list-style: none;
 	text-align:center;
 	margin:4em auto;
 }
@@ -360,9 +423,13 @@ ul{
 	margin-bottom:2em;
 	width:80%;
 }
+.center:before{
+	display:table;
+	width:100%;
+	content:'';
+}
 a.button{
 	border: 1px solid #bdc3c7;
-	border-radius:300px;
 	padding:15px 30px;
 	margin-top:2em;
 	font-size: 14px;
@@ -375,15 +442,6 @@ a.button{
 a.button:hover{
 	background:#373737;
 	color:#fff;
-	-ms-transition: all 0.2s;
-	-webkit-transition: all 0.2s;
-	-moz-transition: all 0.2s;
-	-o-transition: all 0.2s;
-	transition: all 0.2s;
-}
-.mobileMode a.button:hover{
-	background:inherit;
-	color:inherit;
 }
 footer ul li{
 	font-size:14px;
@@ -398,13 +456,14 @@ footer ul li.title{
 }
 footer ul li a{
 	text-decoration:none;
-}
-footer ul li a:hover{
+	border-bottom: solid 1px transparent;
 	-ms-transition: all 0.2s ease-out;
 	-webkit-transition: all 0.2s ease-out;
 	-moz-transition: all 0.2s ease-out;
 	-o-transition: all 0.2s ease-out;
 	transition: all 0.2s ease-out;
+}
+footer ul li a:hover{
 	border-bottom: solid 1px;
 	padding-bottom:5px;
 }
@@ -413,19 +472,72 @@ p.demoNote{
 	color:#999;
 	font-style:italic;
 }
-@media screen and (min-width: 300px) {
-	.home #splashHome .splashTitle h1{
-		font-size: 28vw;
+@media screen and (min-width: 500px) {
+	body {
+		font-size: 100%
 	}
-	.home #splashHome .splashTitle h2{
-		font-size: 15.5vw;
+	.panel{
+		max-width:430px;
+	}
+	#bio .grid-thirds{
+		height:12em;
+	}
+	.grid-thirds, .grid-half{
+		width:49.25%;
+		margin-right:1.5%;
+	}
+	.grid-thirds:nth-child(2n){
+		margin-right:0;
+	}
+	.projects .grid-half{
+		width:49.25%;
+		margin-right:1.5%;
+		margin-bottom:0;
+	}
+	.projects .grid-half:nth-child(2n){
+		margin-right:0;
+	}
+	.projects .grid-thirds, .projects .grid-thirds:nth-child(2n){
+		width:32.3333333%;
+		margin-right: 1.5%;
+		margin-bottom:0;
+	}
+	.projects .grid-thirds:nth-child(3n){
+		margin-right: 0;
+	}
+	form.container{
+		width:70% !important;
+	}
+	form .grid-half{
+		width:48%;
+		margin-right:4%;
+		margin-bottom:0;
+	}
+	form textarea{
+		margin-top:4%;
 	}
 }
 @media screen and (min-width: 700px) {
 	body {
 		font-size: 112.5%;
 	}
-	body h1 {
+	h2{
+		font-size: 1.7em;
+	}
+	.panel{
+		max-width: 470px;
+	}
+	#bio .grid-thirds{
+		height:24vw;
+	}
+	.grid-thirds,.grid-thirds:nth-child(2n){
+		width: 32.333333333%;
+		margin-right:1.5%;
+	}
+	.grid-thirds:nth-child(3n){
+		margin-right: 0;
+	}
+	/*body h1 {
 		font-size:7vw;
 	}
  	.home #splashHome .splashTitle h1{
@@ -442,15 +554,40 @@ p.demoNote{
 	p.demoNote{
 		margin:0 auto !important;
 		width:100%;
-	}
+	}*/
 }
 
 @media screen and (min-width: 900px){
 	body{
-		font-size:150%;
-		text-align:center;
+		font-size:140%;
 	}
-	body h1{
+	h1, h2{
+		letter-spacing: 0.1em;
+	}
+	.splashTitle h2, .splashTitle h1{
+		letter-spacing: 0;
+	}
+	.panel{
+		max-width: 580px;
+	}
+	.aboutMe > .panel{
+		max-width:80%;
+	}
+	#bio .grid-thirds{
+		height:9em;
+	}
+	.grid-thirds,.grid-thirds:nth-child(2n){
+		width: 32.333333333%;
+		margin-right:1.5%;
+	}
+	.grid-thirds:nth-child(3n){
+		margin-right: 0;
+	}
+	.small{
+		font-size:0.7em;
+	}
+
+/*	body h1{
 		margin-bottom:0.6em;
 		font-size:3em;
 		font-size:5vw;
@@ -477,7 +614,7 @@ p.demoNote{
 	    display: -webkit-box;
 	    display: box;
 	    /*newer flexbox*/
-	    display: -webkit-flex;
+/*	    display: -webkit-flex;
 	    display: flex;
 	}
 	.container{
@@ -543,18 +680,8 @@ p.demoNote{
 	.projects .grid-half img{
 		max-width:100% !important;
 	}
-	form.container{
-		width:70%;
-		padding-top:0;
-	}
-	form .grid-half{
-		width:49%;
-		margin-right:2%;
-	}
-	form textarea{
-		margin-top:2%;
-	}
-	.project div{
+*/	
+	.project{
 		line-height:0;
 	}
 	.project img{
@@ -565,7 +692,7 @@ p.demoNote{
 		width:50%;
 		margin:0;
 	}
-	.project p.small{
+/*	.project p.small{
 		margin:0;
 		padding:0 5em;
 	}
@@ -578,7 +705,7 @@ p.demoNote{
 	}
 		p.note{
 		padding:1em 0 !important;
-	}
+	}*/
 }
 @media screen and (min-width:960px){
 	.container{
@@ -594,10 +721,10 @@ p.demoNote{
 form input,
 form textarea{
 	width:100%;
-	padding:7px 35px 7px 20px;
-	font-size:1em;
+	padding:10px 35px 10px 20px;
+	font-size:20px;
 	line-height:1.3em;
-	border: solid gray 1px;
+	border: solid #777 1px;
 }
 form textarea{
 	height:200px;
@@ -606,7 +733,8 @@ form textarea{
 form input:focus,
 form textarea:focus{
 	outline:none!important;
-	border-color:black;
+	padding:8px 33px 8px 18px;
+	border:solid 3px #C2B49A;
 }
 #messageName, #messageEmail, #messageContent{
 	position:relative;
@@ -630,11 +758,7 @@ form textarea:focus{
 #sent:hover{
 	background-color:white !important;
 }
-.grid-half:nth-child(2){
-	margin-right:0;
-}
-
-.grid-thirds:nth-child(3){
+.grid-half:nth-child(2n){
 	margin-right:0;
 }
 .imagehover{
@@ -646,12 +770,9 @@ form textarea:focus{
 	padding:1%;
 	text-align:center;
 }
-.projects .grid-thirds img, .projects .grid-half img{
-	max-width:400px;
-	width:100%;
-	height:auto;
-	display:block;
-	margin:0 auto 1.5em;
+
+.projects a{
+	border:none;
 }
 /*  <section class="svg-container">
     <object type="image/svg+xml" data="images/ShenLongFaceSVG.svg" width="100%" height="100%" class="svg-content"></object>
@@ -809,4 +930,37 @@ left: 0;
 	-moz-transition: all 1s;
 	-o-transition: all 1s;
 	transition: all 1s;
+}
+
+.grid1{
+	height:2.75em;
+	margin-bottom:1em;
+}
+.grid2{
+	height:6.5em;
+	margin-bottom:1em;
+}
+.grid3{
+	height:10.25em;
+	margin-bottom:1em;
+}
+.grid4{
+	height:14em;
+	margin-bottom:1em;
+}
+.grid5{
+	height:17.75em;
+	margin-bottom:1em;
+}
+.grid6{
+	height:21.5em;
+	margin-bottom:1em;
+}
+.grid7{
+	height:25.25em;
+	margin-bottom:1em;
+}
+.grid8{
+	height:29em;
+	margin-bottom:1em;
 }
